--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Accessible Map</title>
+<title>GPSLVN Map</title>
   <!--By Murtada Kamil @GPSLVN 3/8/2022. -->
 
 Read more: https://html.com/tags/comment-tag/#ixzz7Mxk7V1SA
